feat: jdk update, 1.8 -> 21; Spring update, 2.3.1.RELEASE -> 3.2.5